--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:5ac1192aa98733670db9a9598fd1a56d457717b28697eda386b21a6abbe724cd"
+  "signature": "sha256:146bf280d63f6597a72961297b7447ab15e639afecb1e67999d84e10ced41abd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1444,81 +1444,55 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
+     "metadata": {},
      "source": [
-      "## Dimension reduction using PCA\n",
+      "## Dimension reduction in MC\n",
       "\n",
       "Given a generic $n$-dimensional SDE in vector form:\n",
       "\n",
-      "$$\\renewcommand{Sigma}{\\mathcal{S}} d \\bs x = \\bs u dt + A \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
+      "$$\\renewcommand{Sigma}{\\mathcal{S}} \\renewcommand{bt}[1]{\\bs{\\tilde #1}} d \\bs x = \\bs u dt + A \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
       "\n",
       "* $\\Sigma$ is a diagonal matrix of $\\sigma_i$ \n",
       "* $C$ is the correlation matrix of $d \\bs w$, its covariance matrix $V = \\Sigma C \\Sigma$.\n",
       "\n",
-      "Using the EVD to approximate the correlaiton or covariance matrix: \n",
+      "Recall the Cholesky decomposition, $V = LL^T$, then we draw $S \\delta \\bs w = L \\bt z \\sqrt{dt}$: \n",
       "\n",
-      "$$ \\begin{eqnarray} \n",
-      "V &=& R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T \\\\\n",
-      "C &=& U\\Gamma U^T \\approx \\dot U \\dot \\Gamma \\dot U^T\n",
-      "\\end{eqnarray}\n",
+      "$$\n",
+      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] = \\mathbb E[(L \\bt z \\sqrt{dt}) (L \\bt z \\sqrt{dt})^T ] \n",
+      "= L \\mathbb E[\\bt z\\bt z^T] L^T dt = V dt\n",
       "$$\n",
       "\n",
+      "* $\\bt z$ is independent standard normal random vector.\n",
+      "* note the above holds even if $L$ is neither square nor triangular, as long as $V = LL^T$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Dimension reduction with PCA\n",
+      "\n",
+      "Use the PCA of the covariance matrix: \n",
+      "$$\n",
+      "\\small\n",
+      "V = R_V \\Lambda_V R_V^T \\approx \\dot R_V \\dot \\Lambda_V \\dot R_V^T = \\dot R_V \\dot H_V \\dot H_V^T  \\dot R_V^T = (\\overbrace{\\dot R_V \\dot H_V}^{L_V})(\\dot R_V\\dot H_V )^T \\\\$$\n",
+      "PCA on the correlation matrix:\n",
+      "$$\n",
+      "\\small\n",
+      "V = \\Sigma C \\Sigma = \\Sigma (R_C \\Lambda_C R_C^T) \\Sigma \\approx \\Sigma \\dot R_C \\dot \\Lambda_C \\dot R_C^T \\Sigma = \\Sigma \\dot R_C \\dot H_C \\dot H_C^T  \\dot R_C^T \\Sigma^T = (\\underbrace{\\Sigma \\dot R_C \\dot H_C}_{L_C})(\\Sigma \\dot R_C\\dot H_C )^T \n",
+      "$$\n",
+      "\n",
+      "* $\\Lambda = H H^T$, both $\\Lambda$ and $H$ are diagonal matrix with positive elements\n",
       "* The dotted version only retains the first $k$ eigen values\n",
-      "* $\\dot R, \\dot U$ are $n \\times k$ matrices; $\\dot \\Lambda, \\dot \\Gamma$ are $k \\times k$ matrices."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "## Dimension reduction - covariance matrix\n",
+      "* $\\dot R$ and $L_V, L_C$ are $n \\times k$ matrices; $\\dot \\Lambda$ are $k \\times k$ matrices.\n",
       "\n",
-      "$$ V = R \\Lambda R^T \\approx \\dot R \\dot \\Lambda \\dot R^T $$\n",
-      "\n",
-      "We draw $\\Sigma \\delta \\bs w \\approx \\dot R \\dot L \\bs z \\sqrt{dt}$, \n",
-      "* where $\\dot \\Lambda = \\dot L \\dot L$, $\\bs z$ is standard normal vector of length $k$.\n",
-      "\n",
-      "The resulting Brownian motion has the right covariance:\n",
-      "$$\\begin{eqnarray}\n",
-      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] &=& \\mathbb E[(\\dot R \\dot L \\bs z \\sqrt{dt}) (\\dot R \\dot L \\bs z \\sqrt{dt})^T ]\n",
-      "= \\dot R \\dot L \\mathbb E[\\bs z\\bs z^T] \\dot L \\dot R^T  dt \\\\\n",
-      "&=& \\dot R \\dot \\Lambda \\dot R^T dt = V dt\n",
-      "\\end{eqnarray}\n",
-      "$$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "## Dimension reduction - correlation matrix\n",
-      "\n",
-      "$$ C = U\\Gamma U^T \\approx \\dot U \\dot \\Gamma \\dot U^T $$\n",
-      "\n",
-      "We draw $\\delta \\bs w = \\dot U \\dot H \\bs z \\sqrt {dt}$, where $\\dot \\Gamma = \\dot H \\dot H$, we get the correct covariance:\n",
-      "\n",
-      "$$\\begin{eqnarray}\n",
-      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] &=& S\\mathbb E[(\\dot U \\dot H \\bs z \\sqrt{dt}) (\\dot U \\dot H \\bs z \\sqrt{dt})^T ]S^T\n",
-      "= S \\dot U \\dot H \\mathbb E[\\bs z\\bs z^T] \\dot H \\dot U^TS  dt \\\\\n",
-      "&=& S\\dot U \\dot \\Gamma \\dot U^TS dt \\approx S C S dt  = V dt\n",
-      "\\end{eqnarray}\n",
-      "$$\n",
-      "\n",
-      "* Note $\\Sigma$ is diagonal, thus $\\Sigma^T = \\Sigma$\n",
-      "\n",
-      "PCA on covariance and correlation matrix, are they equivalent?"
+      "Simulation can be driven by $\\Sigma \\delta \\bs w = L \\bt z \\sqrt{dt}$:\n",
+      "* Either $L_V = \\dot R_V \\dot H_V$ or $L_C = \\Sigma \\dot R_C \\dot H_C$ works\n",
+      "* $\\bt z$ is of length $k$"
      ]
     },
     {
@@ -1531,13 +1505,13 @@
      "source": [
       "## PCA is scale variant\n",
       "\n",
-      "Given the following two EVD on covariance and correlation matrix:\n",
+      "Given the EVDs on covariance and correlation matrix:\n",
       "\n",
-      "$$R \\Lambda R^T = V = \\Sigma C \\Sigma = \\Sigma U \\Gamma U^T \\Sigma$$\n",
+      "$$R_V \\Lambda_V R_V^T = V = \\Sigma C \\Sigma = \\Sigma R_C \\Lambda_C R_C^T \\Sigma$$\n",
       "\n",
-      "It is tempting to think they are equivalent:\n",
-      "* $\\Sigma U \\Gamma U^T \\Sigma = (\\Sigma U) \\Gamma (\\Sigma U)^T \\rightarrow \\Lambda = \\Gamma$ and $R = \\Sigma U$\n",
-      "* $\\Sigma U \\Gamma U^T \\Sigma = U (\\Sigma \\Gamma \\Sigma) U^T \\rightarrow \\Lambda = \\Sigma \\Gamma \\Sigma $ and $R = U$"
+      "Are they equivalent? \n",
+      "* $\\Sigma R_C \\Lambda_C R_C^T \\Sigma = (\\Sigma R_C) \\Lambda_C (\\Sigma R_C)^T \\rightarrow \\Lambda_C = \\Lambda_V$ and $R_V = \\Sigma R_C$\n",
+      "* $\\Sigma R_C \\Lambda_C R_C^T \\Sigma = R_C (\\Sigma \\Lambda_C \\Sigma) R_C^T \\rightarrow \\Lambda_V = \\Sigma \\Lambda_C \\Sigma $ and $R_C = R_V$"
      ]
     },
     {
@@ -1548,11 +1522,11 @@
       }
      },
      "source": [
-      "However, they are not true because: \n",
-      "* $\\Sigma U$ is not diagonal: $(\\Sigma U)(\\Sigma U)^T = \\Sigma U U^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
-      "* $\\Sigma U \\ne U \\Sigma$, even when $\\Sigma$ is diagonal.\n",
+      "However, neiher is true because: \n",
+      "* $\\Sigma R_C$ is not diagonal: $(\\Sigma R_C)(\\Sigma R_C)^T = \\Sigma R_C R_C^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
+      "* $\\Sigma R_C \\ne R_C \\Sigma$, even when $\\Sigma$ is diagonal.\n",
       "\n",
-      "It is more consistent to apply PCA to the covariance matrix."
+      "There is no simple relationship btw these two EVDs."
      ]
     },
     {
