--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:146bf280d63f6597a72961297b7447ab15e639afecb1e67999d84e10ced41abd"
+  "signature": "sha256:9053b9fe17bb49c5efc28d2a081b313bee2e92226d839e1759be1c6069fe368e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1444,7 +1444,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "## Dimension reduction in MC\n",
       "\n",
