--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:9053b9fe17bb49c5efc28d2a081b313bee2e92226d839e1759be1c6069fe368e"
+  "signature": "sha256:12b5c871b9ba672f1d671e4d384f50f75962181991b7a63c2471b3b0d463739c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1484,10 +1484,10 @@
       "$$\n",
       "\\small\n",
       "V = R_V \\Lambda_V R_V^T \\approx \\dot R_V \\dot \\Lambda_V \\dot R_V^T = \\dot R_V \\dot H_V \\dot H_V^T  \\dot R_V^T = (\\overbrace{\\dot R_V \\dot H_V}^{L_V})(\\dot R_V\\dot H_V )^T \\\\$$\n",
-      "PCA on the correlation matrix:\n",
+      "Or PCA on the correlation matrix:\n",
       "$$\n",
       "\\small\n",
-      "V = \\Sigma C \\Sigma = \\Sigma (R_C \\Lambda_C R_C^T) \\Sigma \\approx \\Sigma \\dot R_C \\dot \\Lambda_C \\dot R_C^T \\Sigma = \\Sigma \\dot R_C \\dot H_C \\dot H_C^T  \\dot R_C^T \\Sigma^T = (\\underbrace{\\Sigma \\dot R_C \\dot H_C}_{L_C})(\\Sigma \\dot R_C\\dot H_C )^T \n",
+      "V = \\Sigma C \\Sigma = \\Sigma (R_C \\Lambda_C R_C^T) \\Sigma \\approx \\Sigma \\dot R_C \\dot \\Lambda_C \\dot R_C^T \\Sigma = \\Sigma \\dot R_C \\dot H_C \\dot H_C^T  \\dot R_C^T \\Sigma^T = (\\overbrace{\\Sigma \\dot R_C \\dot H_C}^{L_C})(\\Sigma \\dot R_C\\dot H_C )^T \n",
       "$$\n",
       "\n",
       "* $\\Lambda = H H^T$, both $\\Lambda$ and $H$ are diagonal matrix with positive elements\n",
@@ -1496,7 +1496,7 @@
       "\n",
       "Simulation can be driven by $\\Sigma \\delta \\bs w = L \\bt z \\sqrt{dt}$:\n",
       "* Either $L_V = \\dot R_V \\dot H_V$ or $L_C = \\Sigma \\dot R_C \\dot H_C$ works\n",
-      "* $\\bt z$ is of length $k$"
+      "* $\\bt z$ is of length $k$ only"
      ]
     },
     {
