--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:12b5c871b9ba672f1d671e4d384f50f75962181991b7a63c2471b3b0d463739c"
+  "signature": "sha256:0c7f39898818ebe7b0029166925f2b9f8729b0e88c09fd46e91358c6abb769e1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,7 +42,9 @@
       "* Eigenvalue and Eigenvector \n",
       "* QR Decomposition\n",
       "* Principal Component Analysis\n",
-      "* Singular Value Decomposition"
+      "* Singular Value Decomposition\n",
+      "\n",
+      "$\\renewcommand{bt}[1]{\\bs{\\tilde #1}} $"
      ]
     },
     {
@@ -143,7 +145,7 @@
      "source": [
       "## Condition number of non-square matrix\n",
       "\n",
-      "We already learned that an invertable matrix $A$'s condition number is \n",
+      "We already proved that an invertable matrix $A$'s condition number is \n",
       "\n",
       "$$k(A) = \\Vert A \\Vert \\Vert A^{-1} \\Vert$$\n",
       "\n",
@@ -193,7 +195,7 @@
       "* $x, z$ are standard normal, $z$ represent an insignificant feature (or accidental correlation)\n",
       "* $\\epsilon$ is a standard normal noise\n",
       "\n",
-      "We regress the vector $\\bs y$ against $X = [\\bs x, \\bs x + .0001 \\bs z, \\bs 1]$:"
+      "We regress the vector $\\bs y$ against $X = [\\bs x, \\bs x + .0001 \\bs z, \\bs 1]^T$:"
      ]
     },
     {
@@ -305,13 +307,29 @@
       "\n",
       "* $\\bs v$ is an eigenvector,  $\\lambda$ is the corresponding eigenvalue\n",
       "* $A$ only changes $\\bs v$'s magnitude, but not direction\n",
-      "* $\\lambda$ can be complex even for real $A$\n",
+      "* $\\lambda$ can be complex even for real $A$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Eigen vector/value conventions\n",
       "\n",
-      "Eigen vector/value naming conventions:\n",
-      "* eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
+      "\n",
+      "$$ A \\bs v = \\lambda \\bs v $$\n",
+      "\n",
+      "Eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
       "  * $\\bs v$ and $- \\bs v$ are equivalent unit eigenvectors\n",
-      "* eigenvalues are named in descending order: $\\lambda_1 \\ge \\lambda_2 \\ge ... \\ge \\lambda_n $, their corresponding eigen vectors are $\\bs {v_1, v_2, ..., v_n}$ \n",
-      "  * can eigenvalues be negative?"
+      "  \n",
+      "Eigenvalues are named in descending order: $\\lambda_1 \\ge \\lambda_2 \\ge ... \\ge \\lambda_n $ \n",
+      "* their corresponding eigen vectors are $\\bs {v_1, v_2, ..., v_n}$ \n",
+      " \n",
+      "Can eigenvalues be negative?"
      ]
     },
     {
@@ -411,12 +429,17 @@
       }
      },
      "source": [
+      "## Eigenvalue decomposition\n",
+      "\n",
+      "$$ A^*(R^{-1})^* = (R^{-1})^* \\Lambda^* $$\n",
+      "\n",
       "If $A$ is real and symmetric: $A^* = A$:\n",
       "\n",
       "* $\\Lambda^* = \\Lambda$: all eigenvalues are real\n",
-      "* we can consider real eigen vectors only without losing generaliy\n",
+      "* we can consider real eigen vectors only without losing generality\n",
       "* $R$ is orthogonal: $(R^{-1})^* = (R^{-1})^T = R \\iff RR^T = I$\n",
-      "* $A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
+      "\n",
+      "$A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
       "* all eigenvalues are positive if and only if $A$ is SPD\n",
       "\n",
       "The conclusion holds even when there are duplicated eigen values, with some care. "
@@ -1029,9 +1052,9 @@
       "The principal component (PC):\n",
       "\n",
       "* Suppose $\\tilde {\\bs r}$ is a random vector, with expectation $\\bar{\\bs r} = \\mathbb{E}[\\tilde{\\bs r}]$ and covariance matrix $ V = \\mathbb{E}[(\\bt r - \\bar{\\bs r})(\\bt r - \\bar{\\bs r})^T] $\n",
-      "  * daily returns of a set of equities is an example of random vectors\n",
+      "  * e.g.: returns of a set of equity names\n",
       "\n",
-      "* PC is defined to be the direction $\\hat{\\bs u}$ onto which the projection $\\bs r^T \\hat{\\bs u}$ has the maximimum variance, \n",
+      "* PC is defined to be the direction $\\hat{\\bs u}$ onto which the projection $\\tilde {\\bs r}^T \\hat{\\bs u}$ has the maximimum variance, \n",
       "  * $\\hat{\\bs u}$ is a unit vector, i.e., $\\Vert \\hat{\\bs u} \\Vert_2 = \\sqrt{\\hat{\\bs u}^T\\hat{\\bs u}} = 1$"
      ]
     },
@@ -1083,9 +1106,9 @@
      "source": [
       "## Link to eigenvectors\n",
       "\n",
-      "The projection of the random vector in the direction of $\\hat{\\bs u}$ is a random scalar $\\hat{\\bs u}^T \\bt r$\n",
+      "The projection $\\hat{\\bs u}^T \\bt r$ is a random scaler:\n",
       "\n",
-      "* the variance of the projection is $\\text{var}[\\hat{\\bs u}^T \\bs r] = \\hat{\\bs u}^T V \\hat{\\bs u}$.\n",
+      "* the variance of the projection is $\\text{var}[\\hat{\\bs u}^T \\bt r] = \\hat{\\bs u}^T V \\hat{\\bs u}$.\n",
       "* the first eigen vector $\\bs v_1$ of $V$ is therefore the principal component\n",
       "\n",
       "If we limit ourselves to all $\\bs u$ that is perpendicular to $\\bs v_1$, then: \n",
@@ -1102,14 +1125,14 @@
       }
      },
      "source": [
-      "## Percentage of variance explained\n",
+      "## Variance explained\n",
       "\n",
       "The total variance of is sum of variance of in all $n$ elements of the random vector, which equals:\n",
       "\n",
       "1. trace of $V$\n",
       "2. sum of all eigen values of $V$\n",
       "\n",
-      "Therefore, the percentage of variance explained by the first $k$ eigenvectors is $\\frac{\\sum_i^k \\lambda_i}{\\sum_i^n \\lambda_i}$. "
+      "The portion of variance explained by the first $k$ eigenvectors is $\\frac{\\sum_i^k \\lambda_i}{\\sum_i^n \\lambda_i}$. "
      ]
     },
     {
@@ -1454,12 +1477,12 @@
       "\n",
       "Given a generic $n$-dimensional SDE in vector form:\n",
       "\n",
-      "$$\\renewcommand{Sigma}{\\mathcal{S}} \\renewcommand{bt}[1]{\\bs{\\tilde #1}} d \\bs x = \\bs u dt + A \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
+      "$$\\renewcommand{Sigma}{\\mathcal{S}} d \\bs x = \\bs u dt + A \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
       "\n",
       "* $\\Sigma$ is a diagonal matrix of $\\sigma_i$ \n",
       "* $C$ is the correlation matrix of $d \\bs w$, its covariance matrix $V = \\Sigma C \\Sigma$.\n",
       "\n",
-      "Recall the Cholesky decomposition, $V = LL^T$, then we draw $S \\delta \\bs w = L \\bt z \\sqrt{dt}$: \n",
+      "With Cholesky decomposition $V = LL^T$, we draw $S \\delta \\bs w = L \\bt z \\sqrt{dt}$: \n",
       "\n",
       "$$\n",
       "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] = \\mathbb E[(L \\bt z \\sqrt{dt}) (L \\bt z \\sqrt{dt})^T ] \n",
@@ -1522,15 +1545,17 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "subslide"
       }
      },
      "source": [
       "However, neiher is true because: \n",
       "* $\\Sigma R_C$ is not diagonal: $(\\Sigma R_C)(\\Sigma R_C)^T = \\Sigma R_C R_C^T \\Sigma = \\Sigma\\Sigma \\ne I$\n",
+      "  * $V = \\Sigma C \\Sigma$, $V$ and $C$ are not similar\n",
       "* $\\Sigma R_C \\ne R_C \\Sigma$, even when $\\Sigma$ is diagonal.\n",
       "\n",
-      "There is no simple relationship btw these two EVDs."
+      "There is no simple relationship btw these two EVDs.\n",
+      "* despite $C$ and $V$ are covariance matrix of $\\bt r$ and $\\Sigma^{-1} \\bt r$ respectively"
      ]
     },
     {
