--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:0c7f39898818ebe7b0029166925f2b9f8729b0e88c09fd46e91358c6abb769e1"
+  "signature": "sha256:19ea18323f22769267f438f65ef74100e7390555f8971a892e8eb9963fd110d1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -431,7 +431,7 @@
      "source": [
       "## Eigenvalue decomposition\n",
       "\n",
-      "$$ A^*(R^{-1})^* = (R^{-1})^* \\Lambda^* $$\n",
+      "$$A R = R\\Lambda \\iff A^*(R^{-1})^* = (R^{-1})^* \\Lambda^* $$\n",
       "\n",
       "If $A$ is real and symmetric: $A^* = A$:\n",
       "\n",
@@ -441,8 +441,7 @@
       "\n",
       "$A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
       "* all eigenvalues are positive if and only if $A$ is SPD\n",
-      "\n",
-      "The conclusion holds even when there are duplicated eigen values, with some care. "
+      "* applies even when there are duplicated eigen values. "
      ]
     },
     {
@@ -1106,7 +1105,7 @@
      "source": [
       "## Link to eigenvectors\n",
       "\n",
-      "The projection $\\hat{\\bs u}^T \\bt r$ is a random scaler:\n",
+      "The projection $\\hat{\\bs u}^T \\bt r$ is a random scalar:\n",
       "\n",
       "* the variance of the projection is $\\text{var}[\\hat{\\bs u}^T \\bt r] = \\hat{\\bs u}^T V \\hat{\\bs u}$.\n",
       "* the first eigen vector $\\bs v_1$ of $V$ is therefore the principal component\n",
@@ -1537,8 +1536,10 @@
       "$$R_V \\Lambda_V R_V^T = V = \\Sigma C \\Sigma = \\Sigma R_C \\Lambda_C R_C^T \\Sigma$$\n",
       "\n",
       "Are they equivalent? \n",
-      "* $\\Sigma R_C \\Lambda_C R_C^T \\Sigma = (\\Sigma R_C) \\Lambda_C (\\Sigma R_C)^T \\rightarrow \\Lambda_C = \\Lambda_V$ and $R_V = \\Sigma R_C$\n",
-      "* $\\Sigma R_C \\Lambda_C R_C^T \\Sigma = R_C (\\Sigma \\Lambda_C \\Sigma) R_C^T \\rightarrow \\Lambda_V = \\Sigma \\Lambda_C \\Sigma $ and $R_C = R_V$"
+      "* $\\Sigma R_C \\Lambda_C R_C^T \\Sigma = (\\Sigma R_C) \\Lambda_C (\\Sigma R_C)^T$\n",
+      "  * implies $\\Lambda_C = \\Lambda_V$ and $R_V = \\Sigma R_C$\n",
+      "* $\\Sigma R_C \\Lambda_C R_C^T \\Sigma = R_C (\\Sigma \\Lambda_C \\Sigma) R_C^T$\n",
+      "  * implies $ \\Lambda_V = \\Sigma \\Lambda_C \\Sigma $ and $R_C = R_V$"
      ]
     },
     {
