--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:9b357660ef36e97cbcbe6e4d117bff9d533a48cb592eb1c1d9f6ad695d9109ca"
+  "signature": "sha256:77ca6c3440b21269f327fb261a0b62a298d0d42ea7650879b6ffe9b81261891b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -549,30 +549,31 @@
       }
      },
      "source": [
-      "$$\\overbrace{\\pmatrix{\n",
-      "* & * & * \\\\  \n",
-      "* & * & * \\\\  \n",
-      "* & * & * \\\\  \n",
-      "* & * & * \\\\  \n",
-      "* & * & * \\\\  \n",
-      "* & * & *  \n",
+      "$$\n",
+      "\\overbrace{\\pmatrix{\n",
+      "* & * & * & * \\\\  \n",
+      "* & * & * & * \\\\  \n",
+      "* & * & * & * \\\\  \n",
+      "* & * & * & * \\\\  \n",
+      "* & * & * & * \\\\  \n",
+      "* & * & * & * \n",
       "}}^A = \n",
       "\\overbrace{\\pmatrix{\n",
-      "* & * & * & * & * \\\\  \n",
-      "* & * & * & * & * \\\\  \n",
-      "* & * & * & * & * \\\\  \n",
-      "* & * & * & * & * \\\\  \n",
-      "* & * & * & * & * \\\\\n",
-      "* & * & * & * & * \n",
+      "* & * & * & * & * & * \\\\  \n",
+      "* & * & * & * & * & * \\\\  \n",
+      "* & * & * & * & * & * \\\\  \n",
+      "* & * & * & * & * & * \\\\  \n",
+      "* & * & * & * & * & * \\\\\n",
+      "* & * & * & * & * & *\n",
       "}}^Q \n",
       "\\;\\;\n",
       "\\overbrace{\\pmatrix{\n",
-      "* & * & * \\\\ \n",
-      "0 & * & * \\\\ \n",
-      "0 & 0 & * \\\\\n",
-      "0 & 0 & 0 \\\\\n",
-      "0 & 0 & 0 \\\\\n",
-      "0 & 0 & 0 \n",
+      "* & * & * & *\\\\ \n",
+      "0 & * & * & *\\\\ \n",
+      "0 & 0 & * & * \\\\\n",
+      "0 & 0 & 0 & * \\\\\n",
+      "0 & 0 & 0 & 0 \\\\\n",
+      "0 & 0 & 0 & 0\n",
       "}}^R$$\n",
       "\n",
       "\n",
