--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:77ca6c3440b21269f327fb261a0b62a298d0d42ea7650879b6ffe9b81261891b"
+  "signature": "sha256:db4dc7339e8b9a48ba53465873de0c8010430fbe85edeed59d23248bd5280a5c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -370,7 +370,8 @@
       "* $\\prod_{i}\\lambda_i = \\det( A )$\n",
       "* $\\sum_i\\lambda_i = \\text{tr}(A)$\n",
       "\n",
-      "It is difficult to directly solve the characteristic function for $\\lambda_i$, especially for large $n$."
+      "It is difficult to solve the characteristic function for $\\lambda_i$, especially for large $n$.\n",
+      "* But once we have eigenvalues, it is easy to find corresponding eigenvectors."
      ]
     },
     {
@@ -496,16 +497,15 @@
      "source": [
       "## Matrix similarity\n",
       "\n",
-      "Square matrix $B$ and $A$ are similar if $B = P^{-1}AP$: \n",
+      "Square matrix $B$ and $A$ are similar if $B = PAP^{-1}$: \n",
       "* similar matrix have identical eigenvalues:\n",
       "\n",
-      "$$ AR = PBP^{-1} R = R \\Lambda \\iff B (P^{-1}R) = (P^{-1} R) \\Lambda $$ \n",
+      "$$ AR = P^{-1}BP R = R \\Lambda \\iff B (PR) = (PR) \\Lambda $$ \n",
       "\n",
-      "* they represents the same linear function in different basis\n",
-      "* $B$ is also called a similarity transformation of $A$\n",
+      "* $B$ is also called a similarity transformation of $A$, representing the same operation in different basis\n",
       "\n",
       "The basic idea of computing eigen values for $A$:\n",
-      "* Find a similarity transformation $B = P^{-1}AP$ so that $B$ is a triangular matrix\n",
+      "* Find a similarity transformation $B = PAP^{-1}$ so that $B$ is a triangular matrix\n",
       "* $A$ and $B$ has identical eigenvalues\n",
       "* Eigen values of a triangular matrix $B$ is just its diagonal elements."
      ]
@@ -601,6 +601,7 @@
       "* set $A_{k+1} = R_kQ_k = Q_k^{-1}A_kQ_k$, $A_{k+1}$ therefore has the same eigen values as $A_k$\n",
       "* stop if $A_k$ is adequately upper triangular\n",
       "* the eigven values are the diagonal elements of $A_k$\n",
+      "* guaranteed to converge if A is real and symmetric\n",
       "\n",
       "This algorithm is unconditionally stable because only orthogonal transformtions are used.\n",
       "\n",
