--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -52,7 +52,9 @@
       "* Foundation of Monte Carlo\n",
       "* Random number generation\n",
       "* Discretize stochastic processes\n",
-      "* Least square MC"
+      "* Least square MC\n",
+      "\n",
+      "$\\renewcommand{bt}[1]{\\tilde{\\boldsymbol #1}}$"
      ]
     },
     {
@@ -1109,7 +1111,73 @@
       "$$\\small dy(t) = \\frac{1}{x(t)}\\left(\\kappa(\\bar x - x(t)) - \\frac{\\sigma^2}{2} \\right) dt + \\frac{\\sigma}{\\sqrt{x(t)}}dw(t) $$\n",
       "\n",
       "* Euler scheme can then be applied to sample $y(t)$, without added bias\n",
-      "* it can be easiliy extended to sample any bounded processes"
+      "* it can be easiliy extended to sample any bounded processes\n",
+      "* But in practice, we still need a reflective bound for $y(t)$ otherwise it goes to $-\\infty$ quickly."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Milstein sampling\n",
+      "\n",
+      "For a diffusion SDE of the form:\n",
+      " \n",
+      "$$ dx_t = u(x_t)dt + \\sigma(x_t) dw_t $$\n",
+      " \n",
+      "Observe that both $u(x_t)$ and $\\sigma(x_t)$ are stochastic through $x_t$:\n",
+      " \n",
+      "$$ d u_s = (\\cdot) ds + \\dot u_s \\sigma_s dw_s,  \\;\\; d\\sigma_s = (\\cdot) ds + \\dot \\sigma_s \\sigma_s dw_s $$\n",
+      " \n",
+      "where $\\dot u_s = \\frac{du(x_s)}{dx_s}, \\dot \\sigma_s = \\frac{du(\\sigma_s)}{dx_s}$.\n",
+      " \n",
+      "All corrections are higher order than $\\delta t$ except the $dw_s dw_t$ term (note $t < u < s < t+\\delta t$):\n",
+      " \n",
+      "$$ \\delta x_t = u_t \\delta t + \\sigma_t \\delta w_t + \\int_t^{t+\\delta t}\\int_t^{s}\\dot\\sigma_u \\sigma_s dw_u dw_s $$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      " The last correction term can be approximated as:\n",
+      "$$ \\small \\begin{eqnarray}\n",
+      "\\sigma_t\\int_t^{t+\\delta t}\\int_t^{s}\\dot\\sigma_u dw_u dw_s &\\approx& \\sigma_t\\dot\\sigma_u \\int_t^{t+\\delta t}\\int_t^{s} dw_u dw_s\n",
+      "= \\sigma_t\\dot\\sigma_t \\int_t^{t+\\delta t} (w_{s}-w_t)dw_s \\\\\n",
+      "&=& \\sigma_t\\dot\\sigma_t \\left(\\int_t^{t+\\delta t} w_{s}dw_s - \\int_t^{t+dt}w_t dw_s\\right) \\\\\n",
+      "&=& \\sigma_t\\dot\\sigma_t \\left(\\int_t^{t+\\delta t} w_{s}dw_s - w_t(w_{t+\\delta t} - w_t)\\right)\n",
+      "\\end{eqnarray}$$\n",
+      " \n",
+      "Note that $\\int w_t dw_t = \\frac{1}{2}(w_t^2 - t)$, the term in the bracket becomes:\n",
+      "$$ \\small \\frac{1}{2} (w_{t+\\delta t}^2 - w_t^2) - \\frac{1}{2}\\delta t - w_t(w_{t+\\delta t} - w_t) - dt = \\frac{1}{2}(w_{t+\\delta t} - w_t)^2 - \\frac{\\delta t}{2} \\approx \\frac{1}{2}(\\delta^2w - \\delta t) $$\n",
+      " \n",
+      "This term vanishes for infinitesimal $dt$ but not for finited sample size $\\delta t$. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Properties of Milstein\n",
+      "\n",
+      "Therefore, if we sample $\\delta w_t = \\tilde z \\sqrt{\\delta t}$, we add the following correction term:\n",
+      " \n",
+      "$$\\delta x = u(t) \\delta t + \\sigma(t) \\sqrt{\\delta t} \\tilde z + \\sigma \\dot \\sigma (\\tilde z^2 - 1) \\delta t $$\n",
+      "\n",
+      "* Milstein sampling is 1st order in strong convergence and weak convergence\n",
+      "* But it is non-trivial to extend Milstein to multi-dimensional "
      ]
     },
     {
