--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:db4dc7339e8b9a48ba53465873de0c8010430fbe85edeed59d23248bd5280a5c"
+  "signature": "sha256:1d25140dca0fe888851db8bbab008305ff744688c41cff74e6cd46ddce9d4839"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -108,7 +108,7 @@
       " $$\\small X = \\pmatrix{\\bs x_1^T \\\\ \\bs x_2^T \\\\ \\vdots \\\\ \\bs x_m^T}, \\;\\; \\bs y = \\pmatrix{y_1 \\\\ y_2 \\\\ \\vdots \\\\ y_m}$$\n",
       " \n",
       "* We want to find a factor loading vector $\\bs \\beta$ so that the linear function $\\hat y = \\bs x^T \\bs \\beta$ is the best aproximation to the observed inputs/outputs.\n",
-      "* $X \\bs \\beta = \\bs y$ is over-determined, no vector $\\bs \\beta$ solves the linear system exactly\n",
+      "* $X \\bs \\beta = \\bs y$ is over-determined, no vector $\\bs \\beta$ solves it exactly\n",
       "* Instead, we find the $\\bs \\beta^* $ that minimizes $\\Vert X \\bs{\\beta - y}\\Vert_2$."
      ]
     },
@@ -503,6 +503,7 @@
       "$$ AR = P^{-1}BP R = R \\Lambda \\iff B (PR) = (PR) \\Lambda $$ \n",
       "\n",
       "* $B$ is also called a similarity transformation of $A$, representing the same operation in different basis\n",
+      "* $P$ is orthogonal if $A$ is real and symmetric\n",
       "\n",
       "The basic idea of computing eigen values for $A$:\n",
       "* Find a similarity transformation $B = PAP^{-1}$ so that $B$ is a triangular matrix\n",
@@ -601,7 +602,7 @@
       "* set $A_{k+1} = R_kQ_k = Q_k^{-1}A_kQ_k$, $A_{k+1}$ therefore has the same eigen values as $A_k$\n",
       "* stop if $A_k$ is adequately upper triangular\n",
       "* the eigven values are the diagonal elements of $A_k$\n",
-      "* guaranteed to converge if A is real and symmetric\n",
+      "* guaranteed to converge if $A$ is real and symmetric\n",
       "\n",
       "This algorithm is unconditionally stable because only orthogonal transformtions are used.\n",
       "\n",
@@ -1486,11 +1487,11 @@
       "* $\\Sigma$ is a diagonal matrix of $\\sigma_i$ \n",
       "* $C$ is the correlation matrix of $d \\bs w$, its covariance matrix $V = \\Sigma C \\Sigma$.\n",
       "\n",
-      "Recall Cholesky decomposition $V = LL^T$: $S \\delta \\bs w = L \\bt z \\sqrt{dt}$: \n",
+      "Recall Cholesky decomposition $V = LL^T$: $\\Sigma \\delta \\bs w = L \\bt z \\sqrt{\\delta t}$: \n",
       "\n",
       "$$\n",
-      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] = \\mathbb E[(L \\bt z \\sqrt{dt}) (L \\bt z \\sqrt{dt})^T ] \n",
-      "= L \\mathbb E[\\bt z\\bt z^T] L^T dt = V dt\n",
+      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] = \\mathbb E[(L \\delta t z \\sqrt{\\delta t}) (L \\delta t z \\sqrt{\\delta t})^T ] \n",
+      "= L \\mathbb E[\\delta t z\\delta t z^T] L^T \\delta t = V \\delta t\n",
       "$$\n",
       "\n",
       "* $\\bt z$ is independent standard normal random vector.\n",
@@ -1521,9 +1522,9 @@
       "* The dotted version only retains the first $k$ eigen values\n",
       "* $\\dot R$ and $L_V, L_C$ are $n \\times k$ matrices; $\\dot \\Lambda$ are $k \\times k$ matrices.\n",
       "\n",
-      "Simulation can then be driven by $\\Sigma \\delta \\bs w = L \\bt z \\sqrt{dt}$:\n",
+      "Simulation can then be driven by $\\Sigma \\delta \\bs w = L \\dot{\\bt z} \\sqrt{\\delta t}$:\n",
       "* Either $L_V = \\dot R_V \\dot H_V$ or $L_C = \\Sigma \\dot R_C \\dot H_C$ works\n",
-      "* $\\bt z$ is of length $k$ only"
+      "* $\\dot{\\bt z}$ is of length $k$ only"
      ]
     },
     {
