--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:1fd681839a185ed8bd97463f94f72219f0614a500df6097f91ca9af2f1f4b717"
+  "signature": "sha256:2ee50a1d08369966fa9a41f0b92f67a2dc038da768bc182c5d046193dbe800c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1490,8 +1490,8 @@
       "Recall Cholesky decomposition $V = LL^T$: $\\Sigma \\delta \\bs w = L \\bt z \\sqrt{\\delta t}$: \n",
       "\n",
       "$$\n",
-      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] = \\mathbb E[(L \\delta t z \\sqrt{\\delta t}) (L \\delta t z \\sqrt{\\delta t})^T ] \n",
-      "= L \\mathbb E[\\delta t z\\delta t z^T] L^T \\delta t = V \\delta t\n",
+      "\\mathbb E [\\Sigma\\delta \\bs w (\\Sigma\\delta \\bs w)^T] = \\mathbb E[(L \\delta t \\bt z \\sqrt{\\delta t}) (L \\delta t \\bt z \\sqrt{\\delta t})^T ] \n",
+      "= L \\mathbb E[\\delta t \\bt z\\delta t \\bt z^T] L^T \\delta t = V \\delta t\n",
       "$$\n",
       "\n",
       "* $\\bt z$ is independent standard normal random vector.\n",
