--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:2df5a71e101a46db3bb0cbdc866a94ea09b099d28ca144df88a520c384e9189a"
+  "signature": "sha256:d11bb456438863b010b7f53df171061aeee65ae6efe123edfb6208bac7fc0ddf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -959,9 +959,8 @@
      "metadata": {},
      "source": [
       "* Note the short-handed notation of $\\ddot{f}(1) = \\frac{d^2f(t)}{d t^2} \\rvert _{t=1}$ etc. \n",
-      "* Like cubic spline, there are $4(n-1)$ variables and constraints\n",
-      "* Solvable as a $4(n-1)$ dimensional linear systems \n",
-      "* However, we can do much better."
+      "* Like cubic spline, there are $4(n-1)$ variables and constraints, $\\lambda$ is a known constant\n",
+      "* Solvable as a $4(n-1)$ dimensional linear systems ~ $O((4n)^3)$"
      ]
     },
     {
