--- a/Homework3.ipynb
+++ b/Homework3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fdaebf67d3388505629f9a0a0f45c518dfb268142bf4d601072289f1b48d0af8"
+  "signature": "sha256:dfbabca3a3f22e7fdcf2fc08a7977d93bbadce2ee63fb8dc9ad7faceb5e7cf27"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -47,7 +47,7 @@
       "\n",
       "1. if $X$ is not fully ranked, i.e., its column vectors are linearly dependent, do the three methods still work?\n",
       "2. if not, can you propose an modifications to the QR method, so that you can find the minimum value of $\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$ even when $X$ is rank deficient? Note that $\\bs \\beta$ is not unique when $X$ is not fully ranked, but there is still a deterministic answer to the minimum value of $\\Vert X \\bs \\beta - \\boldsymbol y\\Vert_2$. \n",
-      "3. what is an easy and effective method to find a $\\bs \\beta$ that is good enough when $A$ is not fully ranked in practice?\n",
+      "3. what is an easy and effective method to find a $\\bs \\beta$ that is good enough when $X$ is not fully ranked in practice?\n",
       "\n",
       "Hint:\n",
       "- It is also possible to make SVD work with rank deficient matrix. Please refer to http://www.cs.cornell.edu/Courses/cs3220/2010sp/notes/svd.pdf if you are interested."
