--- a/Homework8.ipynb
+++ b/Homework8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4ec8f03dfd0805a45af3dc82d939ece1dcbe8649863e4f75715e31d51465e631"
+  "signature": "sha256:e4aae0f81326f8fe228ef6d8d2e9dee2b12c3a0fc8d01a7425446280f3101bd6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Homework Set 8"
+      "# Homework Set 7"
      ]
     },
     {
@@ -32,7 +32,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -40,13 +40,13 @@
      "source": [
       "## Problem 1:\n",
       "\n",
-      "* Applying the forward Euler's scheme to the second order ODE:\n",
+      "Prove the statement:\n",
+      "\n",
+      "* If $\\mathbf{x}^*$ is a solution to the original optimization problem (**Primal Problem**), then for $\\forall \\mathbf{\\lambda} \\succeq 0$ and any $\\mathbf{\\mu}$,\n",
       "\n",
       "$$\n",
-      "y'' + (\\lambda+1)y' + \\lambda y = 0, \\;\\; y(0) = 1, \\;\\; y'(0) = \\lambda - 2, \\;\\; \\lambda >> 1.\n",
+      "\\hat{f}(\\mathbf{\\mu}, \\mathbf{\\lambda}) \\leq f(\\mathbf{x}^*).\n",
       "$$\n",
-      "\n",
-      "Rewrite it as a system of first order ODEs. Find the region of absolute stability. (Hint: find the eigen value decomposition of the coefficient matrix, and the region of absolute stability is the domain where the step size is chosen so that each eigen value satifies the condition for the 1D ODE.)\n",
       "     \n",
       "   "
      ]
@@ -57,7 +57,16 @@
      "source": [
       "## Problem 2\n",
       "\n",
-      "* Derive the CFL condition for the Crank-Nicholson method for the Black-Scholes PDE, assuming $r=0$.\n",
+      "Derive the dual problem for the portfolio optimization problem:\n",
+      "\n",
+      "\n",
+      "\\begin{aligned}\n",
+      "\\min_{\\mathbf{x}} \\;\\; \\frac{1}{2} \\lambda\\; \\mathbf{x}^T \\Sigma \\mathbf{x} &- \\mu^T \\mathbf{x}\n",
+      "\\\\\n",
+      "s.t. \\;\\;\\sum_i x_i &= 1\n",
+      "\\end{aligned}\n",
+      "\n",
+      "where $\\lambda$ is the risk-aversion coefficient, $\\mu$ is the expected asset return vector and $\\Sigma$ is the covariance matrix. \n",
       "\n"
      ]
     },
@@ -67,8 +76,24 @@
      "source": [
       "## Problem 3\n",
       "\n",
-      "* Implement the FDM for Black-Scholes PDE using the Crank-Nicolson Scheme and test your code using the same example in Lecture 13 for both the vanilla European Call and the Up-and-out Barrier Call.\n",
-      "\n"
+      "\n",
+      "Similar to our example in class, here is the table of future liabilities (in $millions):\n",
+      "\n",
+      "|  Years | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 |\n",
+      "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
+      "|  Benefits($millions) | 24 | 26 | 28 | 28 | 26 | 29 | 32 | 33 | 34 |\n",
+      "\n",
+      "\n",
+      "And here is the set of bonds that can be invested in:\n",
+      "\n",
+      "|  Bonds | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 |\n",
+      "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
+      "|  Price | 102 | 101.625 | 103 | 102 | 102 | 103 | 101 | 101.5 | 102 | 102.75 | 103 | 104 |\n",
+      "|  Coupon(%) | 1.25 | 1.5 | 2.5 | 1.75 | 2.125 | 2.5 | 2.625 | 3 | 3.125 | 3.5 |  3.75 | 4.5 |\n",
+      "|  Maturity(Years) | 1 | 2 | 2 | 3 | 4 | 5 | 5 | 6 | 7 | 8 |  8 | 9 |\n",
+      "\n",
+      "\n",
+      "Find the **least cost** portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.\n"
      ]
     }
    ],
