--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:2ee50a1d08369966fa9a41f0b92f67a2dc038da768bc182c5d046193dbe800c2"
+  "signature": "sha256:25401d418b3af11126508bc0558500e8e0eed9c84d45730499567f64718efae6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -594,7 +594,7 @@
       "## QR algorithm for solving eigenvalues\n",
       "\n",
       "\n",
-      "QA algorithm is one of the most important numerical methods of the 20th century <a href=https://www.siam.org/pdf/news/637.pdf>link</a>\n",
+      "QR algorithm is one of the most important numerical methods of the 20th century <a href=https://www.siam.org/pdf/news/637.pdf>link</a>\n",
       "\n",
       "Start with $A_0 = A$, then iterate:\n",
       "\n",
@@ -2193,7 +2193,7 @@
       "\n",
       "For a linear system $\\bs y = A \\bs x$, consider a perturbation $\\delta \\bs x$ to the input $\\bs x$:\n",
       "\n",
-      "* if $\\delta \\bs x$ is stretched by a larger factor than $\\bs x$, then the reltative error grows.\n",
+      "* if $\\delta \\bs x$ is stretched by a larger factor than $\\bs x$, then the relative error grows.\n",
       "* the worst case occurs when $\\bs x$ is stretched by $\\sigma_n(A)$, while $\\delta \\bs x$ is stretched by $\\sigma_1(A)$\n",
       "  * the relative error grows by a factor of $\\frac{\\sigma_1(A)}{\\sigma_n(A)}$.\n",
       "* Orthogonal matrix represents a pure rotation\n",
