--- a/Homework3.ipynb
+++ b/Homework3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dfbabca3a3f22e7fdcf2fc08a7977d93bbadce2ee63fb8dc9ad7faceb5e7cf27"
+  "signature": "sha256:06a261afb78dafad4d7a4ee6c47af1353689ab597d3967c6bb5ea51885cec310"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -110,7 +110,7 @@
       "4. Plot these principal components of the covariance matrix that account for 95% of the variance and try to give economic explanations of what mode of rates changes they represent.\n",
       "4. plot the history of PCA scores, i.e., the factor loading (or the projection) to the first 3 principal components, of the historical data.\n",
       "4. write a program to simulate the daily interest rate **changes** up to the future time of 20Y using the first few principal components of the **changes** that accounted for 95% of the variance. From your simulated IR change paths, re-estimate the covariance matrix of the **changes**, then comapre it to the original covariance matrix estimated from historical data. (think of a suitable metric for the comparison). You can assume that the daily rates changes are independent normals, and there are 250 business days per year. \n",
-      "5. obtain the IR **levels** from the simulated paths of changes in step #4, and compute the following statistical metrics of the IR **level** distributions: mean, standard deviation, 2% and 98% quantiles. Plot the evolution of these statistical metrics over time for the 1Y and 10Y term rates. Make any reasonable assumptions on the starting interest rate term structure. \n",
+      "5. obtain the IR **levels** from the simulated paths of changes in the previous step, and compute the following statistical metrics of the IR **level** distributions: mean, standard deviation, 2% and 98% quantiles. Plot the evolution of these statistical metrics over time for the 1Y and 10Y term rates. Make any reasonable assumptions on the starting interest rate term structure. \n",
       "6. [extra credit] Compute the 2% and 98% quantile of the historical 1Y and 10Y rate levels, and comment on if the simulated levels from the previous step matches the historical quantiles.\n",
       "6. [extra credit] Comment on what could be done to make the simulated IR term structure more realistic. And which is a more suitable choice, PCA on IR levels or changes? Does your answer depend on your application?\n",
       "\n",
